# more-ds

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  NOTICE  README.md  README.rst  pyproject.toml  setup.cfg
docs/: api.rst  conf.py  index.rst
src/more_ds/id/: __init__.py  semver.py
src/more_ds/network/: url.py
src/more_ds/time/: timer.py
tests/id/: test_semver.py
tests/network/: test_url.py
tests/time/: test_timer.py
