[metadata]
license = Apache-2.0
license_files =
	LICENSE
    licenses/LICENSE-nwa-stdlib
name = more-ds
version = 0.0.4
author = Guido Kollerie
author_email = guido@kollerie.com
description = More Data Structures
long_description = file: README.rst
url = https://github.com/gkoller/more-ds
project_urls =
    Changelog = https://github.com/gkoller/more-ds/blob/main/CHANGELOG.rst
    Source Code = https://github.com/gkoller/more-ds
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    flake8
    flake8-bandit  # security checks
    flake8-bugbear  # assorted opinionated checks
    flake8-builtins  # check for name collision with builtins
    flake8-comprehensions
    flake8-docstrings
    flake8-implicit-str-concat
    flake8-print
    flake8-rst  # Allows run flake8 on code snippets in docstrings or rst files
    flake8-string-format
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    pytest-xdist
    build
    tbump == 6.3.1
[options.package_data]
more_ds = py.typed

[tool:pytest]
addopts=--doctest-modules
testpaths = tests src

[coverage:run]
branch = True
source =
    src/more_ds

[flake8]
# A = builtins
# B = bugbear
# C = comprehensions
# D = docstrings
# E = pycodestyle errors, rst
# F = flake8 pyflakes, rst
# G = logging-format
# P = str-format
# RST = rst-docstrings
# S = bandit
# T = print
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
max-line-length = 99
select = A, B, C, D, E, F, G, P, RST, S, T, W, B9, ISC
doctests = True
ban-relative-imports = true
ignore =
    D100  # Missing docstring in public module
    D104  # Missing docstring in public package
    D301  # Use r""" if any backslashes in a docstring
    S101  # Use of assert detected
    W503  # line break before binary operator
    S311  # Standard pseudo-random generators are not suitable for security/cryptographic purposes.
exclude =
    .git
    .cache
    .eggs
    __pycache__
    docs
    build
    dist
    .venv
    venv

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = False
disallow_untyped_decorators = True
disallow_untyped_defs = True
ignore_missing_imports = True
implicit_reexport = False
no_implicit_optional = True
show_column_numbers = True
show_error_codes = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_ignores = True
