[metadata]
license = Apache-2.0
license_files =
	LICENSE
    licenses/LICENSE-nwa-stdlib
name = more-ds
version = 0.0.4
author = Guido Kollerie
author_email = guido@kollerie.com
description = More Data Structures
long_description = file: README.rst
url = https://github.com/gkoller/more-ds
project_urls =
    Changelog = https://github.com/gkoller/more-ds/blob/main/CHANGELOG.rst
    Source Code = https://github.com/gkoller/more-ds
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.8

[options.packages.find]
where=src

[options.extras_require]
dev =
    black
    flake8
    flake8-colors  # ANSI colors highlight for Flake8
    flake8-raise  # Find improvements for raise statements
    flake8-bandit  # Security checks
    flake8-bugbear  # Assorted opinionated checks
    flake8-builtins  # Check for name collision with builtins
    flake8-comprehensions # Write better list/set/dict comprehensions.
    flake8-docstrings  # Uses pydocstyle to check docstrings
    flake8-implicit-str-concat  #
    flake8-print  # Check for Print statements in python files
    flake8-rst  # Allows run flake8 on code snippets in docstrings or rst files
    flake8-string-format  # str.format checker
    flake8-logging-format  # Validate logging format strings
    isort
    mypy
    pre-commit
    pytest
    pytest-cov
    pytest-xdist
    build  # PEP5127 package builder (recommended by PYPA)
    tbump == 6.3.1
    twine  # Submit package to PYPI
[options.package_data]
more_ds = py.typed

[tool:pytest]
addopts=--doctest-modules
testpaths = tests src

[coverage:run]
branch = True
source =
    src/more_ds

[flake8]
# A = builtins
# B = bugbear
# C4 = comprehensions
# D = docstrings
# E = pycodestyle errors, rst
# F = flake8 pyflakes, rst
# G = logging-format
# P = str-format
# RST = rst-docstrings
# S = bandit
# T = print
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
ban-relative-imports = True
max-line-length = 99
docstring-convention = google
statistics = True
select = A, B, C4, D, E, F, G, P, RST, S, T, W, B9, ISC
doctests = True
ignore =
    # D100  Missing docstring in public module
    D100,
    # D104  Missing docstring in public package
    D104,
    # D301  Use r""" if any backslashes in a docstring
    D301,
    # E203  Black may add spaces in slice[func(v) : end] syntax
    E203,
    # E231  Black leaves commas after combining lines
    E231,
    # F403  Allow import * (for settings)
    F403,
    # F405  Allow import * (for settings)
    F405,
    # E731  Allow lambdas:
    E731,
    # S101  Use of assert detected
    S101,
    # S311  Standard pseudo-random generators are not suitable for security/cryptographic purposes.
    S311
    # W503  line break before binary operator (incompatible with black):
    W503,
    # R102  Allow raise Exception()
    R102
exclude =
    .git
    .cache
    .eggs
    __pycache__
    docs
    build
    dist
    .venv
    venv

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = False
disallow_untyped_decorators = True
disallow_untyped_defs = True
ignore_missing_imports = True
implicit_reexport = False
no_implicit_optional = True
show_column_numbers = True
show_error_codes = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_ignores = True
